Fixed layout on mobile

--- a/_sass/_jumbotron.scss
+++ b/_sass/_jumbotron.scss
@@ -33,7 +33,7 @@ html {
   line-height: 50px;
   border-bottom: 1px solid fade-out($blue, 0.5);
   background-color: $blue;
-  box-shadow: 0 0 16px rgba(0,0,0, 0.3);
+  box-shadow: 0 0 16px rgba(0,0,0,0.2);
   color: white;
   z-index: 2;
   a {
@@ -46,6 +46,11 @@ html {
       background-color: rgba(255,255,255,0.2);
       text-decoration: none;
     }
+  }
+}
+@media (min-width: 767px) {
+  .nav a.hidden-xs {
+    display: inline-block !important;
   }
 }
 .corner {
@@ -67,16 +72,21 @@ html {
   overflow: hidden;
 }
 .member {
+  min-height: 200px;
   .img {
+    box-shadow: 0 0 16px rgba(0,0,0,0.1);
     display: inline-block;
     float: right;
-    width: 150px;
-    height: 200px;
-    margin-left: 10px;
+    border-radius: 100px;
+    width: 160px;
+    height: 160px;
+    margin-left: 15px;
 
     background: url('http://i.stack.imgur.com/jGlzr.png') no-repeat 0 0 scroll;
-    background-color:#0C0C0C;
-    background-size: 100% 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
   }
   margin-bottom: 10px;
 }
@@ -93,7 +103,7 @@ html {
   width: 110%;
   position: relative;
   left: -5%;
-  box-shadow: inset 0 0 16px rgba(0,0,0, 0.2);
+  box-shadow: inset 0 0 16px rgba(0,0,0, 0.1);
 
   overflow: hidden;
 
